chore(unit-tests): Changed README with CMake + GoogleTest steps for run tests

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -152,7 +152,7 @@
 		},
 		{
 			"type": "cppbuild",
-			"label": "CMake: unit tests",
+			"label": "CMake: run tests",
 			"command": "${command:cmake.ctest}",
 			"args": [],
 			"options": {
